--- a/p1xt-tier2-landingpage/index.html
+++ b/p1xt-tier2-landingpage/index.html
@@ -14,8 +14,18 @@
         background: url("https://images.unsplash.com/photo-1555985202-12975b0235dc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1049&q=80")
         no-repeat center center;
         background-size: cover;
-        padding-top: 12rem;
-        padding-bottom: 12rem;
+        position: relative;
+        padding-top: 8rem;
+        padding-bottom: 8rem;
+      }
+      .masthead h1 {
+        font-size: 2rem;
+      }
+      #responsive-icon h3 {
+        font-size: 1.5rem;
+      }
+      #responsive-icon i {
+        font-size: 3rem;
       }
       .bg-img {
         background-image: url("https://images.unsplash.com/photo-1555768900-f16e8658cca5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1055&q=80");
@@ -26,6 +36,22 @@
       }
       .testimonial-image {
         max-width: 12rem;
+      }
+      @media (min-width: 768px) {
+        .masthead {
+          padding-top: 12rem;
+          padding-bottom: 12rem;
+        }
+        .masthead h1 {
+          font-size: 3rem;
+        }
+        #responsive-icon h3{
+          margin-top: 1rem;
+          font-size: 2rem;
+        }
+        #responsive-icon i {
+          font-size: 5rem;
+        }
       }
     </style>
   </head>
@@ -43,76 +69,76 @@
         <div class="container text-center">
           <h1 class="text-white">Build a landing page for your business or project and generate more leads!</h1>
           <form class="form-inline justify-content-center mt-5" action="" method="">
-            <input type="text" class="form-control form-control-lg w-50" name="" value="">
-            <button type="button" class="btn btn-primary btn-lg ml-2" name="button">Sign Up</button>
+            <input type="text" class="form-control w-50" name="" value="">
+            <button type="button" class="btn btn-primary ml-2" name="button">Sign Up</button>
           </form>
         </div>
       </header>
 
-      <section class="text-center bg-light py-5">
-        <div class="row">
-          <div class="col-lg-4">
-            <i class="fas fa-desktop fa-5x"></i>
+      <section id="responsive-icon" class="text-center bg-light py-5">
+        <div class="row no-gutters">
+          <div class="col-lg-4 mb-3 mb-lg-1">
+            <i class="fas fa-desktop"></i>
             <h3>Fully Responsive</h3>
-            <p>Theme will look goo</p>
+            <p>Theme will look good in any device</p>
+          </div>
+          <div class="col-lg-4 mb-3 mb-lg-1">
+            <i class="fas fa-desktop icon"></i>
+            <h3>Fully Responsive</h3>
+            <p>Theme will look good in any device</p>
           </div>
           <div class="col-lg-4">
-            <i class="fas fa-desktop icon fa-5x"></i>
+            <i class="fas fa-desktop icon"></i>
             <h3>Fully Responsive</h3>
-            <p>Theme will look goo</p>
-          </div>
-          <div class="col-lg-4">
-            <i class="fas fa-desktop icon fa-5x"></i>
-            <h3>Fully Responsive</h3>
-            <p>Theme will look goo</p>
+            <p>Theme will look good in any device</p>
           </div>
         </div>
       </section>
 
-      <section class="text-center">
-        <div class="row align-items-center">
-          <div class="col-lg-6">
-            <h3>Fully Responsive</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <section class="">
+        <div class="row align-items-center no-gutters">
+          <div id="film1" class="bg-img img-fluid col-lg-6 order-lg-2">
           </div>
-          <div id="film1" class="bg-img col-lg-6">
+          <div class="col-lg-6 order-lg-1 p-5">
+            <h3 class="mb-4">Fully Responsive</h3>
+            <p>This is a clone of <a target="_blank" href="https://blackrockdigital.github.io/startbootstrap-landing-page/">this</a> them</p>
           </div>
         </div>
-        <div class="row align-items-center">
+        <div class="row align-items-center no-gutters">
           <div id="film2" class="bg-img col-lg-6">
           </div>
-          <div class="col-lg-6">
-            <h3>Fully Responsive</h3>
+          <div class="col-lg-6 p-5">
+            <h3 class="mb-4">Fully Responsive</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
-        <div class="row align-items-center">
-          <div class="col-lg-6">
-            <h3>Fully Responsive</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="row align-items-center no-gutters">
+          <div id="film3" class="bg-img col-lg-6 order-lg-2">
           </div>
-          <div id="film3" class="bg-img  col-lg-6">
+          <div class="col-lg-6 p-5 order-lg-1">
+            <h3 class="mb-4">Fully Responsive</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
       </section>
 
-      <section class="text-center bg-light">
+      <section class="text-center bg-light py-5">
         <h2 class="mb-5">What People Saying</h2>
-        <div class="row">
-          <div class="col-lg-4">
-            <img class="testimonial-image img-fluid rounded-circle mb-5" src="https://images.unsplash.com/photo-1545877682-3ce2985b2085?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="">
-            <h4>Yoo Lee</h4>
-            <p>Mczd das n sddsaawed fdsdm fvxvsd afvnxfnsjvd </p>
+        <div class="row no-gutters">
+          <div class="col-lg-4 mb-4">
+            <img class="testimonial-image img-fluid rounded-circle mb-2" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQqZAx_vdf0lgUXKUakPJFuL_qFjYdZEdtCi385DV_NxMl2voUw" alt="">
+            <h4>Neil R.</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+          </div>
+          <div class="col-lg-4 mb-4">
+            <img class="testimonial-image img-fluid rounded-circle mb-2" src="https://m.media-amazon.com/images/M/MV5BOTUwMmZjN2MtYzdhMS00NTBiLThiZjYtMzQ0N2NiYWM5MGFjL2ltYWdlXkEyXkFqcGdeQXVyMTgxOTIzNzk@._V1_UY317_CR63,0,305,305_AL_.jpg" alt="">
+            <h4>Ronnie O.</h4>
+            <p>Lorem ipsum dolor sit amet, consecteturelit, sed do eiusmod</p>
           </div>
           <div class="col-lg-4">
-            <img class="testimonial-image img-fluid rounded-circle mb-5" src="https://images.unsplash.com/photo-1545877682-3ce2985b2085?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="">
-            <h4>Yoo Lee</h4>
-            <p>Mczd das n sddsaawed fdsdm fvxvsd afvnxfnsjvd </p>
-          </div>
-          <div class="col-lg-4">
-            <img class="testimonial-image img-fluid rounded-circle mb-5" src="https://images.unsplash.com/photo-1545877682-3ce2985b2085?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="">
-            <h4>Yoo Lee</h4>
-            <p>Mczd das n sddsaawed fdsdm fvxvsd afvnxfnsjvd </p>
+            <img class="testimonial-image img-fluid rounded-circle mb-2" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQM3FiNfdu5j8SO6ViNuM9ofUq2GnS6aOZgrLaAetkcR8UFZfaVoQ" alt="">
+            <h4>John H.</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
           </div>
         </div>
       </section>
@@ -121,23 +147,23 @@
         <div class="container text-center my-3">
           <h3 class="text-white">Build a landing page for your business or project and generate more leads!</h3>
           <form class="form-inline justify-content-center mt-5" action="" method="">
-            <input type="text" class="form-control form-control-lg w-50" name="" value="">
-            <button type="button" class="btn btn-primary btn-lg ml-2" name="button">Sign Up</button>
+            <input type="text" class="form-control w-50" name="" value="">
+            <button type="button" class="btn btn-primary ml-2" name="button">Sign Up</button>
           </form>
         </div>
       </section>
 
       <footer class="bg-light text-center">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-6">
-              <a class="btn btn-link" href="#">About</a>
+          <div class="row no-gutters">
+            <div class="col-lg-6 text-lg-left">
+              <a class="btn btn-link pl-0" href="#">About</a>
               <a class="btn btn-link" href="#">Terms of Use</a>
               <a class="btn btn-link" href="#">Contact</a>
               <a class="btn btn-link" href="#">Privacy Policy</a>
-              <p class="text-muted small">© Your Website 2019. All Rights Reserved.</p>
+              <p class="text-muted small">© My Website 2019. All Rights Reserved.</p>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 text-lg-right">
               <a class="btn btn-link" href="#"><i class="fab fa-facebook-square fa-2x"></i></a>
               <a class="btn btn-link" href="#"><i class="fab fa-twitter-square fa-2x"></i></a>
               <a class="btn btn-link" href="#"><i class="fab fa-instagram fa-2x"></i></a>
